# GraphicsDemos

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  compile_commands.json  remove-cmake.patch
.github/workflows/: CLang.yml  GCC.yml  build.yml
cameras/: CMakeLists.txt  README.md  camera.hpp  firstPersonShootingCamera.cpp  firstPersonShootingCamera.hpp  firstPersonShootingCamera2.cpp  firstPersonShootingCamera2.hpp  utilities.hpp
cmake/: FindAssimp.cmake  FindCatch2.cmake  FindGLFW.cmake  FindImgui.cmake  FindSDL2_ttf.cmake  Findgl3w.cmake  conan.cmake  options.cmake
datastructures/: CMakeLists.txt  README.md  kdtree.cpp  quadtree.cpp
datastructures/kdtree/: CMakeLists.txt  README.md  kdtree.cpp
datastructures/quadtree/: CMakeLists.txt  README.md  pointRegionQuadtree.cpp  pointRegionQuadtree.hpp  quadtree.cpp  quadtree.hpp
datastructures/quadtree/test/: CMakeLists.txt  testPointRegionQuadtree.cpp  testPrintNode.cpp  testQuadTree.cpp
glTF/: CMakeLists.txt  SimpleBox.cpp
mimicOpenGL/: CMakeLists.txt  README.md  mimicOpenGL.cpp  run.sh
mimicOpenGL/include/: Image.hpp  Line.hpp  PlyLoader.hpp  Type.hpp
mimicOpenGL/src/: Image.cpp  Line.cpp  PlyLoader.cpp
mimicOpenGL/test/: CMakeLists.txt  testParsePly.cpp
opengl/: CMakeLists.txt  README.md  REAME.md  fixedPipelineOpenGLQt5.cpp  fixedPipelineOpenGLSDL.cpp  fixedPipelineOpenGLWin32.cpp  fixedPipelineOpenGLX11.cpp  programmablePipelineGl3wSDL.cpp  programmablePipelineGl3wWin32.cpp  programmablePipelineGlBindingSDL.cpp  programmablePipelineOpenGLSDL.cpp  programmablePipelineOpenGLWin32.cpp  programmablePipelineSDL2EGL.cpp  programmablePipelineX11.cpp
opengl/android/: build.gradle
opengl/android/app/: build.gradle
opengl/android/app/src/main/: AndroidManifest.xml
opengl/android/app/src/main/cpp/: CMakeLists.txt  android_main.cpp
opengl/android/app/src/main/res/values/: strings.xml
opengl/android/gradle/wrapper/: gradle-wrapper.properties
opengl/context/: CMakeLists.txt  README.md  fixedPipelineOpenGLWin32.cpp  programmablePipelineGl3wSDL.cpp  programmablePipelineSDL2EGL.cpp
opengl/context/android/: build.gradle
opengl/context/android/app/src/main/cpp/: CMakeLists.txt
opengl/context/android/app/src/main/res/values/: styles.xml
opengl/context/android/gradle/wrapper/: gradle-wrapper.properties
opengl/shaders/: CMakeLists.txt  README.md  controlTriangleColorWithMousePosition.cpp  drawCube.cpp  drawCubeWithPerspective.cpp  drawCubeWithPerspectiveUBO.cpp  drawRedPointPipeline.cpp  drawRedPointShader.cpp  drawRedTriangleShader.cpp  drawTrianglePositionAndColorUsingAttributes.cpp  drawTrianglePositionAndColorUsingAttributesDSA.cpp  drawTrianglePositionAndColorUsingAttributesDSAOneVBO.cpp  drawTriangleUsingAttributes.cpp  drawTriangleUsingAttributesDSA.cpp
opengl/shaders/cube/: CMakeLists.txt  drawCube.cpp  drawCubeWithPerspective.cpp  drawRedPointShader.cpp  drawRedTriangleShader.cpp
opengl/shaders/lights/: CMakeLists.txt  ambient.cpp
opengl/shaders/materials/: CMakeLists.txt  ambientPerFragment.cpp  diffuse.cpp  diffusePerFragment.cpp  diffusePerFragmentUBO.cpp  loadObj.cpp  specular.cpp
opengl/shaders/postprocess/: CMakeLists.txt  simpleFrameBuffer.cpp
opengl/shaders/postprocess/shaders/: fragment.glsl
opengl/shaders/texture/: CMakeLists.txt  README.md  TextureDSA.cpp  uploadDownloadTexture.cpp
opengl/shaders/triangle/: CMakeLists.txt  README.md  triangle450.cpp  triangle450UseUinform.cpp  triangle450UseVertexBufferObject.cpp  triangle450UseVertexBufferObjectColor.cpp  triangle450UseVertexBufferObjectColor2.cpp
opengl/shaders/triangle/shaders/: fragment.glsl  simple_vertex.glsl  vertexVBO.glsl  vertexVBO2.glsl
scene/: CMakeLists.txt  ambientPerFragment.cpp  diffuse.cpp  diffusePerFragment.cpp  main.cpp
shaders/: CMakeLists.txt  README.md
shaders/lights/: CMakeLists.txt  ambient.cpp
shaders/materials/: CMakeLists.txt  ambientPerFragment.cpp  diffuse.cpp  diffusePerFragment.cpp  diffusePerFragmentUBO.cpp  loadObj.cpp  specular.cpp  test.cpp  wireFrame.cpp
shaders/postprocess/: CMakeLists.txt  simpleFrameBuffer.cpp
shaders/postprocess/shaders/: framebuffer_fs.glsl  framebuffer_vs.glsl  simple_fragment_frameBuffer.glsl  simple_vertex_frameBuffer.glsl
shaders/texture/: .gitignore  CMakeLists.txt  README.md  TextureDSA.cpp  uploadDownloadTexture.cpp
shaders/texture/shaders/: vertex.glsl
shaders/triangle/: CMakeLists.txt  triangle450.cpp  triangle450UseUinform.cpp
shaders/triangle/shaders/: simple_fragment.glsl  simple_vertex.glsl  unifrom_vertex.glsl
webgl/HelloWorld/: index.html
webgl/HelloWorld/scripts/: main.js
webgl/McNopper/Example01/: index.html
webgl/McNopper/Example01/scripts/: main.js
webgl/McNopper/Example02/scripts/: main.js
webgl/McNopper/Example03/: index.html
webgl/McNopper/Example03/scripts/: main.js
window/: CMakeLists.txt  README.md  simpleWindowGLFW.cpp  simpleWindowQt5.cpp  simpleWindowSDL.cpp  simpleWindowSFML.cpp  simpleWindowWin32.cpp  simpleWindowX11.cpp
window/android/: .gitignore  build.gradle
window/android/app/: build.gradle
window/android/app/src/main/: AndroidManifest.xml
window/android/app/src/main/cpp/: CMakeLists.txt  android_main.cpp
window/android/app/src/main/res/values/: strings.xml  styles.xml
